Correction bug - Implémentation fonctionnalités Stagiaire corrigée